--- a/Musobaqa/index.html
+++ b/Musobaqa/index.html
@@ -23,14 +23,8 @@
     />
   </head>
   <body>
-    <div class="container_div font-mono">
-      <section class="loader">
-        <img
-          src="https://media.tenor.com/HeOPOURUzwEAAAAM/loading-blue.gif"
-          alt=""
-        />
-      </section>
-      <header class="max-w-[650px] m-auto py-10">
+    <div class="container_div">
+      <header class="max-w-[850px] m-auto py-10  mb-20">
         <!-- NAVBAR -->
         <nav
           class="flex justify-between items-center w-[800px] px-24 max-[447px]:px-4 max-md:px-5 py-2 text-white"
@@ -66,7 +60,15 @@
         <div
           class="search px-24 max-[447px]:px-2 max-[447px]:text-center max-[660px]:py-10"
         ></div>
-        <div class="container-user"></div>
+        <div class="search-bar">
+          <div class="search-logo"><img src="./images/search.svg" alt=""></div>
+          <form action="">
+              <input type="text" id="search" placeholder="enter your username">
+              <div class="search-error"></div>
+              <button class="search-btn">Search</button>
+          </form>
+      </div>
+        <div class="container-user  mb-20"></div>
   </body>
   <script src="./js/app.js"></script>
 </html>
