--- a/Musobaqa/index.html
+++ b/Musobaqa/index.html
@@ -5,29 +5,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project</title>
+    <title>Git hub user </title>
     <!-- custom css link -->
     <link rel="stylesheet" href="./css/main.css" />
-
     <!-- tailwind link -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- font -->
-    <link rel="stylesheet" href="./Space_Mono/SpaceMono-Bold.ttf" />
-    <!-- font awesome link -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
   </head>
   <body>
     <div class="container_div">
       <header class="max-w-[750px] m-auto py-10 rounded-[20px]">
         <!-- NAVBAR -->
         <nav class="flex justify-between items-center  py-2 text-white">
-          <div class="logo text-black text-2xl flex gap-2  items-center">
+          <div class="logo ">
             <h1>devfinder</h1>
           </div>
           <div class="mode">
