--- a/Musobaqa/index.html
+++ b/Musobaqa/index.html
@@ -37,7 +37,7 @@
               type="text"
               id="search"
               placeholder="enter your username"
-              class="bg-transparent outline-none text-xl name"
+              class=" outline-none text-xl name"
             />
             <button class="search-btn">Search</button>
           </form>
@@ -57,10 +57,11 @@
             </div>
           </div>
 
-         <div class="info-desc mt-[-20px] ml-[21%] text-[16px] mb-9">
+      <div class="sections ml-[21%]">
+        <div class="info-desc mt-[-20px]  text-[16px] mb-9">
           Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros.
          </div>
-         <div class="info-stats w-[480px] h-[85px] flex py-5 px-7 justify-between items-center rounded-lg ml-[21%] mb-9  ">
+         <div class="info-stats w-[480px] h-[85px] flex py-5 px-7 justify-between items-center rounded-lg  mb-9  ">
           <div class="stats_block">
               <div class="stats_title">Repos</div>
               <div class="stats_desc repos">8</div>
@@ -74,28 +75,29 @@
               <div class="stats_desc following">9</div>
           </div>
       </div>
-      <div class="info-links flex gap-14 ml-[20%]">
+      <div class="info-links flex gap-14 ">
         <div class="links-left">
             <div class="links_block w-[220px] flex items-center gap-4 mb-5">
-                <div class="links_icon"><img src="./image/location.svg" alt=""></div>
+                <div class="links_icon"><img src="./images/location.svg" alt=""></div>
                 <div class="links_text location">San Francisco</div>
             </div>
             <div class="links_block">
-                <div class="links_icon"><img src="./image/url.svg" alt=""></div>
+                <div class="links_icon"><img src="./images/url.svg" alt=""></div>
                 <div class="links_text url">https://github.blog</div>
             </div>
         </div>
         <div class="links-right">
             <div class="links_block">
-                <div class="links_icon"><img src="./image/twitter.png" alt=""></div>
+                <div class="links_icon"><img src="./images/twitter.png" alt=""></div>
                 <div class="links_text twitter">Not Available</div>
             </div>
             <div class="links_block">
-                <div class="links_icon"><img src="./image/office.svg" alt=""></div>
+                <div class="links_icon"><img src="./images/office.svg" alt=""></div>
                 <div class="links_text office">@github</div>
             </div>
         </div>
     </div>
+      </div>
          </div>
       </header>
     </div>
