--- a/Musobaqa/index.html
+++ b/Musobaqa/index.html
@@ -42,7 +42,7 @@
             <button class="search-btn">Search</button>
           </form>
         </div>
-        
+        <!-- Main -->
         <div class="container-user w-full rounded-[15px] p-12">
           <div class="info-top flex gap-10">
             <div class="info-img w-[120px] h-[120px] rounded-full ">
@@ -56,7 +56,6 @@
                 <div class="info-id text-[#0079ff] text-[18px] mb-[20px]">@octocat</div>
             </div>
           </div>
-
       <div class="sections ml-[21%]">
         <div class="info-desc mt-[-20px]  text-[16px] mb-9">
           Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros.
