--- a/Musobaqa/index.html
+++ b/Musobaqa/index.html
@@ -43,13 +43,13 @@
           </form>
         </div>
         <!-- Main -->
-        <div class="container-user w-full rounded-[15px] p-12">
+        <div class="container-user">
           <div class="info-top flex gap-10">
             <div class="info-img w-[120px] h-[120px] rounded-full ">
                 <img src="./images/git-hub img.png" alt="">
             </div>
             <div class="info-right w-full">
-                <div class="right-top flex items-center justify-between">
+                <div class="right-top">
                     <div class="name text-2xl  ">The Octocat</div>
                     <div class="date text-[16px]">Joined 25 Jan 2011</div>
                 </div>
@@ -60,7 +60,7 @@
         <div class="info-desc mt-[-20px]  text-[16px] mb-9">
           Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros.
          </div>
-         <div class="info-stats w-[480px] h-[85px] flex py-5 px-7 justify-between items-center rounded-lg  mb-9  ">
+         <div class="info-stats ">
           <div class="stats_block">
               <div class="stats_title">Repos</div>
               <div class="stats_desc repos">8</div>
